--- a/starter/src/App.css
+++ b/starter/src/App.css
@@ -164,6 +164,22 @@ body,
   cursor: pointer;
 }
 
+.shelf-label{
+  position: absolute;
+  top: 0px;
+  left: 5px;
+  right: 15px;
+  height: 18px;
+  border-radius: 5px;
+  background: #60ac5d;
+
+  color: white;
+  font-size: 11px;
+  line-height: 18px;
+  text-align: center;
+}
+
+
 /* book cover */
 
 .book-cover {
